# deepracer-ros2-foxy-nav2

./: env.sh  frames.gv
deepracer_bringup/config/: agent_control.yaml  nav2_default_view.rviz  nav2_params_nav_amcl_dr_demo.yaml  nav2_params_nav_amcl_sim_demo.yaml  navigate_w_replanning_and_recovery.xml
deepracer_bringup/launch/: deepracer.launch.py  deepracer_navigation_dr.launch.py  deepracer_navigation_sim.launch.py  deepracer_sim.launch.py  deepracer_spawn.launch.py  nav_amcl_demo_sim.launch.py
deepracer_bringup/maps/aula_primer_piso/: map.pgm  map.yaml
deepracer_bringup/maps/oficina/: map.pgm  map.yaml
deepracer_bringup/maps/oficina2/: map.pgm  map.yaml
deepracer_bringup/maps/subsuelo/: map.pgm  map.yaml
deepracer_description/models/xacro/control/: deepracer_ros_control.xacro
deepracer_description/rviz/: nav2_default_view.rviz
deepracer_nodes/: install_dependencies.sh
deepracer_nodes/cmdvel_to_servo_pkg/cmdvel_to_servo_pkg/: cmdvel_to_servo_node.py  constants.py
deepracer_nodes/imu_pkg/imu_pkg/: BMI160.py  I2CID.py  constants.py  imu_node.py
deepracer_nodes/imu_pkg/launch/: imu_pkg_launch.py
deepracer_nodes/rf2o_laser_odometry/src/: CLaserOdometry2D.cpp  CLaserOdometry2DNode.cpp
deepracer_nodes/rplidar_ros/src/: #rplidar_node.cpp#  rplidar_node.cpp
deepracer_nodes/waypoint_follower_pkg/: package.xml  setup.cfg  setup.py
deepracer_nodes/waypoint_follower_pkg/launch/: waypoint_follower_launch.py
deepracer_nodes/waypoint_follower_pkg/waypoint_follower_pkg/: robot_navigator.py  waypoint_follower_node.py
(+5 files in other folders)
